--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -35,7 +35,7 @@
 	width: 154px;
 }
 #footer div .connect a {
-	background: url(../images/icons.png) no-repeat;
+	background: url(../image/icons.png) no-repeat;
 	display: block;
 	float: left;
 	height: 28px;
