--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -4,6 +4,9 @@ body {
 	text-align: center;
 }
 /*home page*/
+#header{
+	text-align:left;
+}
 #wrap{
     margin-left: auto;
     margin-right: auto;
