--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -11,7 +11,7 @@
 #wrapper{
     text-align: center;
     margin-top: -5px;
-    background-color: #E1FFE4;
+    background-color: #ffffff;
 	padding-bottom: 122px;
     min-height:100%;
 
@@ -38,7 +38,7 @@
 }
 .menu-title a:hover{
     color:lightblue;
-	}
+}
 .menu-content{
 		display: none;
     position: absolute;
@@ -127,7 +127,7 @@
 	border:2px solid #606060;
 }
 .courselink:hover + .coursedescription{
-margin-top:-5px;
+	margin-top:-5px;
 }
 .coursedescription{
 	margin-top: 20px;
@@ -138,24 +138,8 @@ margin-top:-5px;
 #intro{
 	margin-top:30px;
 }
-#bname{
-	padding:30px;
-	font-size: 20px;
-}
-.teacher{
-	display: inline-block;
-	text-align: left;
-	width:1000px;
-	height:auto;
-	background-color: white;
-}
-.teacherd{
-	display: inline-block;
-	margin-left: 50px;
-	margin-top: 20px;
-	margin-bottom:20px;
-}
 /*end home page*/
+
 /*login page*/
 #login {
 	position: relative;;
@@ -183,8 +167,8 @@ margin-top:-5px;
 .loginform{
 	text-align: center;
 	width:300px;
- margin-left: 50px;
- margin-bottom: 10px;
+    margin-left: 50px;
+    margin-bottom: 10px;
 }
 .textfield{
 	width:250px;
@@ -196,7 +180,7 @@ margin-top:-5px;
 .button {
 	text-align: left;
 	border:2px solid white;
-  background-color:Transparent;
+    background-color:Transparent;
 	font-size:20px;
 
 }
@@ -204,5 +188,74 @@ margin-top:-5px;
 	background: white;
 	border:2px solid lightblue;
 }
-
 /*end login page*/
+
+/*Start About Us page*/
+.teacher{
+	display: inline-block;
+	text-align: center;
+	width:1000px;
+	height:auto;
+	background-color: white;
+}
+.teacherd{
+	display: inline-block;
+	margin-left: 50px;
+	margin-top: 20px;
+	margin-bottom:20px;
+}
+
+#page-heading {
+	padding:30px;
+	padding-bottom: 100px;
+	font-family: Verdana, sans-serif;
+	font-size: 60px;
+	font-variant: small-caps;
+}
+
+.red-heading {
+	color: #ff6666;
+	padding: 20px;
+	font-family: Verdana, sans-serif;
+	font-size: 22px;
+	font-variant: small-caps;
+}
+
+.school-description {
+	padding: 10px;
+	margin-left: 20%;
+	margin-right: 20%;
+	font-family: Verdana, sans-serif;
+	font-size: 16px;
+	text-align: justify;
+}
+
+#staff-heading {
+	padding: 30px;
+	margin-top: 50px;
+	font-family: Verdana, sans-serif;
+	font-size: 30px;
+	font-variant: small-caps;
+}
+
+.tname {
+	font-family: Verdana, sans-serif;
+	font-size: 16px;
+	font-variant: small-caps;
+	font-weight: bold;
+	line-height: 150%;
+	text-align: center;
+}
+
+.more-description {
+	font-family: Verdana, sans-serif;
+	font-size: 14px;
+	font-variant: small-caps;
+	line-height: 150%;
+	text-align: center;
+}
+
+.timage {
+	text-align: center;
+}
+/*End About Us page*/
