--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -88,7 +88,6 @@
 #content{
 	height:auto;
     min-height:340px;
-    margin-top: 75px;
     text-align: center;
 }
 .coursetype{
@@ -259,3 +258,33 @@
 	text-align: center;
 }
 /*End About Us page*/
+/*career page*/
+.jobs{
+	margin-top: 20px;
+  display:inline-block;
+	text-align: center;
+	margin:10px;
+	position:relative;
+	width:calc(100%/4);
+	height:500px;
+	background-color: grey;
+}
+.jtitle{
+	margin:10px;
+	text-align: center;
+	background-color: white;
+	height:40px;
+	line-height:40px;
+}
+.caption{
+	text-align: left;
+	font-size: 25px;
+	color:lightblue;
+	padding:5px;
+}
+.jname, .jtime, .jdescription{
+	text-align: left;
+	color:white;
+	padding:10px;
+}
+/*end career page*/
