--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -191,21 +191,27 @@
 
 /*Start About Us page*/
 .teacher{
-	display: inline-block;
+
 	text-align: center;
-	width:1000px;
-	height:auto;
+
 	background-color: white;
 }
 .teacherd{
+	margin-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	/* OLD: Can't put each teacher inline because we 
+	need to put extended description under each one
+	
 	display: inline-block;
 	margin-left: 50px;
 	margin-top: 20px;
 	margin-bottom:20px;
+	*/
 }
 
 #page-heading {
-	padding:30px;
+	padding:20px;
 	padding-bottom: 100px;
 	font-family: Verdana, sans-serif;
 	font-size: 60px;
@@ -233,7 +239,7 @@
 	padding: 30px;
 	margin-top: 50px;
 	font-family: Verdana, sans-serif;
-	font-size: 30px;
+	font-size: 40px;
 	font-variant: small-caps;
 }
 
@@ -246,18 +252,28 @@
 	text-align: center;
 }
 
-.more-description {
+.teacher-description {
+	padding: 10px;
+	margin-left: 30%;
+	margin-right: 30%;
 	font-family: Verdana, sans-serif;
-	font-size: 14px;
-	font-variant: small-caps;
-	line-height: 150%;
+	font-size: 15px;
+	text-align: justify;
+}
+
+.instrument {
+	font-family: Verdana, sans-serif;
+	font-size: 16px;
 	text-align: center;
+	padding-bottom: 7px;
+	font-variant: small-caps;
 }
 
 .timage {
 	text-align: center;
 }
 /*End About Us page*/
+
 /*career page*/
 .jobs{
 	margin-top: 20px;
