--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -20,7 +20,7 @@
 	position:relative;
 	margin-left:350px;
 	margin-top:-150px;
-	text-align:left;
+	text-align:right;
 	border-radius: 4px;
 	font-family: Verdana,Geneva,Arial,Helvetica,sans-serif;
 	padding:10px;
@@ -28,8 +28,8 @@
 .menu-title, .menu-title a{
 	text-decoration: none;
 	display: inline-block;
-  padding-left:25px;
-  padding-right: 25px;
+  padding-left:15px;
+  padding-right: 15px;
   color:white;
 
 }
