--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -1,5 +1,10 @@
 
 /*home page*/
+body {
+	background:url('../image/back.gif') no-repeat;
+    margin:0;
+    background-size:100%;
+}
 #header{
 	text-align: left;
 }
@@ -10,10 +15,12 @@
 }
 #wrapper{
     text-align: center;
-    margin-top: -5px;
-    background-color: #ffffff;
+    margin-top: -60px;
+    background-color: white;
 	padding-bottom: 122px;
     min-height:100%;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
 
 }
 #menu{
@@ -62,33 +69,16 @@
 
 }
 #slider{
-   padding-top:50px;
-   margin-top: -20px;
-}
-#details{
-	text-align: center;
-	line-height: 40px;
-	font-size: 20px;
-	height:40px;
-	width:150px;
-	border:2px solid white;
-	margin-left:580px;
-	margin-top: -60px;
-}
-#details a{
-    text-decoration: none;
-    color: white;
-}
-#details:hover{
-	background: grey;
-	border:4px solid lightblue;
-	margin-left:578px;
-	margin-top: -62px;
+   padding-top:100px;
 }
 #content{
-	height:auto;
-    min-height:340px;
-    text-align: center;
+	background-color: white;
+    width: auto;
+    min-height: 320px;
+    border-radius: 50% / 100%;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    text-align:center;
 }
 .coursetype{
 	display: inline-block;
@@ -134,9 +124,6 @@
 	height:50px;
 	margin-left: -50px;
 }
-#intro{
-	margin-top:30px;
-}
 /*end home page*/
 
 /*login page*/
@@ -151,6 +138,9 @@
 	margin-left: calc(100%/3);
 	margin-top: calc(100%/10);
 	box-shadow: 5px 5px 5px black;
+}
+#logcontent{
+	min-height:340px;
 }
 
 .titlebar {
@@ -212,9 +202,10 @@
 
 #page-heading {
 	padding:20px;
-	padding-bottom: 100px;
+	padding-bottom: 50px;
 	font-family: Verdana, sans-serif;
 	font-size: 60px;
+	color:grey;
 	font-variant: small-caps;
 }
 
