update meanu with a search bar

--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -15,22 +15,48 @@ body {
 }
 #wrapper{
     text-align: center;
-    margin-top: -60px;
+    margin-top: -100px;
     background-color: white;
 	padding-bottom: 122px;
     min-height:100%;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
+    border-top-left-radius: 100px;
+    border-top-right-radius: 100px;
 
 }
-#menu{
+#search{
 	position:relative;
-	margin-left:350px;
-	margin-top:-150px;
+	display: inline;
+	background: white;
+	border-radius: 4px;
+	padding: 5px 5px 10px 5px;
+	margin:0;
+	margin-right: 20px;
+}
+#stext{
+	padding-top:5px;
+	padding-bottom: 5px;
+	border-radius: 4px;
+	border:none;
+}
+#sbutton{
+	background:url('../image/search.png') no-repeat;
+	padding-top:15px;
+	padding-bottom: 10px;
+    border:none;
+    width:30px;
+    height:30px;
+}
+#menu{
+	position:fixed;
+	margin-left:300px;
+	margin-top:-155px;
 	text-align:right;
 	border-radius: 4px;
+	background-color: black;
 	font-family: Verdana,Geneva,Arial,Helvetica,sans-serif;
 	padding:10px;
+	width:calc(100%/1.3);
+	z-index: 2;
 }
 .menu-title, .menu-title a{
 	text-decoration: none;
@@ -67,9 +93,6 @@ body {
 .menu-title:hover .menu-content{
     display:block;
 
-}
-#slider{
-   padding-top:100px;
 }
 #content{
 	background-color: white;
