--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -318,3 +318,22 @@ body {
 	padding:10px;
 }
 /*end career page*/
+
+/*Enrolments page*/
+.form-wrapper {
+	text-align: left;
+	background-color: white;
+	/*Needs to be padding, not margin, in order to hide 
+	the unwanted part of the background image*/
+	padding-left: 20%;
+	padding-right: 20%;
+	padding-bottom: 100px;
+	font-family: Verdana, sans-serif;
+	font-size: 15px;
+}
+
+.options {
+	font-size: 12px;
+}
+
+/*end enrolments page*/
