--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -1,7 +1,7 @@
 /*----------------------------------------footer-styles---------------------------------------*/
 #footer {
 	background-color: #111111;
-	margin: 0;
+	margin-top: 45px;
 	min-height: 122px;
 	padding: 0;
 	width: 100%;
