--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -136,7 +136,8 @@ body {
 	height:150px;
 	width: 150px;
 	border-radius: 50%;
-	border:2px solid #606060;
+	border:2px;
+	background:blue;
 }
 .courselink:hover + .coursedescription{
 	margin-top:-5px;
