--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -128,7 +128,6 @@ body {
 }
 .courselink:hover{
 	text-align: center;
-	
 	margin-top:-25px;
 	margin-left:-25px;
 	font-size: 50px;
@@ -137,6 +136,7 @@ body {
 	width: 150px;
 	border-radius: 50%;
 	border:2px;
+	border:2px dashed #606060;
 }
 .courselink:hover + .coursedescription{
 	margin-top:-5px;
