--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -149,60 +149,6 @@ body {
 }
 /*end home page*/
 
-/*login page*/
-#login {
-	position: relative;;
-	display: block;
-	border:1px solid #242424;
-	text-align:center;
-	background-color: grey;
-	height:auto;
-	width:400px;
-	margin-left: calc(100%/3);
-	margin-top: calc(100%/10);
-	box-shadow: 5px 5px 5px black;
-}
-#logcontent{
-	min-height:340px;
-}
-
-.titlebar {
-	text-align: left;
-	font-size: 18px;
-	width:auto;
-	height:40px;
-	line-height: 40px;
-	background-color: white;
-	margin-bottom: 10px;
-}
-
-.loginform{
-	text-align: center;
-	width:300px;
-    margin-left: 50px;
-    margin-bottom: 10px;
-}
-.textfield{
-	width:250px;
-	height:25px;
-	padding:2px;
-	border: 2px solid grey;
-	margin-bottom: 10px;
-}
-.button {
-	text-align: left;
-	border:2px solid white;
-        background-color:white;
-	font-size:20px;
-	
-
-}
-.button:hover  {
-	background: black;
-	border:2px solid lightblue;
-	color: white;
-}
-/*end login page*/
 
 /*Start About Us page*/
 .teacher{
@@ -212,6 +158,7 @@ body {
 	background-color: white;
 }
 .teacherd{
+	display:inline-block;
 	margin-bottom: 20px;
 	padding-top: 20px;
 	padding-bottom: 20px;
@@ -261,9 +208,8 @@ body {
 }
 
 .teacher-description {
-	padding: 10px;
-	margin-left: 30%;
-	margin-right: 30%;
+	padding: 20px;
+	width:400px;
 	font-family: Verdana, sans-serif;
 	font-size: 15px;
 	text-align: justify;
