--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -162,6 +162,7 @@ body {
 	margin-bottom: 20px;
 	padding-top: 20px;
 	padding-bottom: 20px;
+	text-align: center;
 }
 
 #page-heading {
@@ -209,10 +210,11 @@ body {
 
 .teacher-description {
 	padding: 20px;
+	padding-left:25%;
 	width:400px;
 	font-family: Verdana, sans-serif;
 	font-size: 15px;
-	text-align: justify;
+	text-align:left;
 }
 
 .instrument {
