homepage main layout

--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -1,7 +1,7 @@
 
 /*home page*/
 body {
-	background:url('../image/back.gif') no-repeat;
+	background:url('../image/backk.png') no-repeat;
     margin:0;
     background-size:100%;
 }
@@ -95,13 +95,51 @@ body {
 
 }
 #content{
-	background-color: white;
+	background-color: #ffffff;
     width: auto;
-    min-height: 320px;
-    border-radius: 50% / 100%;
+    min-height: 500px;
+    
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     text-align:center;
+	/* margin-top: 400px; */
+}
+
+#content2{
+	background-color: #ffffff;
+    width: auto;
+    min-height: 100px;
+    
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    text-align:center;
+	/* margin-top: 400px; */
+}
+
+.slider_caption {
+  /* padding-top: 12%; 
+  margin-bottom: 12%; */
+  padding:13%;
+  position: center;
+  text-align: center;
+  z-index: 999; 
+} 
+
+.slider_caption > h2 {
+  color: #ffffff;
+  font-size: 65px;
+  font-weight: 700;
+  line-height: 76px;
+  margin: auto;
+  padding-bottom: 5px;
+  text-align: center;
+  
+  text-transform: uppercase ;
+  width: 90%;
+}
+.slider_caption>p{
+	color: #ffffff;
+	font-size: 20px;	
 }
 .coursetype{
 	display: inline-block;
@@ -166,11 +204,11 @@ body {
 }
 
 #page-heading {
-	padding:20px;
-	padding-bottom: 50px;
-	font-family: Verdana, sans-serif;
-	font-size: 60px;
-	color:grey;
+	padding:60px;
+	padding-bottom: 60px;
+	font-family: Verdana, sans-serif;  
+	font-size: 30px;
+	color:#3A8EBD;
 	font-variant: small-caps;
 }
 
