--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -205,7 +205,7 @@ body {
 
 #page-heading {
 	padding:60px;
-	padding-bottom: 60px;
+	padding-bottom: 100px;
 	font-family: Verdana, sans-serif;  
 	font-size: 30px;
 	color:#3A8EBD;
@@ -269,9 +269,12 @@ body {
 /*End About Us page*/
 
 /*career page*/
+.jobimage{
+	margin-bottom: 100px
+}
 .jobs{
 	margin-top: 20px;
-  display:inline-block;
+    display:inline-block;
 	text-align: center;
 	margin:10px;
 	position:relative;
@@ -296,7 +299,65 @@ body {
 	text-align: left;
 	color:white;
 	padding:10px;
+	
 }
+
+
+
+#main-content {
+    display: block;
+    width: 66.4%;
+    overflow: hidden; 
+    
+}
+ table td {
+    font-size: 15px;
+   /*  font-size: 0.75rem; */
+    border: 1px solid #ebebeb;
+    border-top: 0;
+    text-align: center;
+   /*  vertical-align: middle; */
+    padding: 10px;
+    padding: 0.625rem;
+	weight:500px;
+	
+}  
+table {
+	
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+body {
+    font-family: "PT Serif", Georgia, Times, "Times New Roman", serif;
+    font-size: 30px;
+    font-size: 1.0rem;
+    line-height: 1.6;
+    word-wrap: break-word;
+}
+.entry-content {
+    font-size: 30px;
+    font-size: 1.063rem;
+    line-height: 1.4;
+	
+
+}
+.button {
+    background-color: #3A8EBD;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: center;
+    font-size: 16px;
+    
+    cursor: pointer;
+	
+	margin-top : 70px;
+	
+    margin-right: auto;
+}
+
 /*end career page*/
 
 /*Enrolments page*/
@@ -329,4 +390,6 @@ body {
 	line-height: 3em;
 }
 
+
 /*end enrolments page*/
+
