--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -15,13 +15,9 @@ body {
 }
 #wrapper{
     text-align: center;
-    margin-top: -100px;
     background-color: white;
 	padding-bottom: 122px;
     min-height:100%;
-    border-top-left-radius: 100px;
-    border-top-right-radius: 100px;
-
 }
 #search{
 	position:relative;
@@ -97,10 +93,9 @@ body {
 #content{
 	background-color: #ffffff;
     width: auto;
-    min-height: 200px;
     
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+    
+    
     text-align:center;
 	/* margin-top: 400px; */
 }
@@ -269,9 +264,7 @@ body {
 /*End About Us page*/
 
 /*career page*/
-.jobimage{
-	margin-bottom: 100px
-}
+
 .jobs{
 	margin-top: 20px;
     display:inline-block;
@@ -301,7 +294,22 @@ body {
 	padding:10px;
 	
 }
-
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
 
 
 #main-content {
@@ -315,47 +323,32 @@ body {
    /*  font-size: 0.75rem; */
     border: 1px solid #ebebeb;
     border-top: 0;
-    text-align: center;
+    text-align: left;
    /*  vertical-align: middle; */
     padding: 10px;
     padding: 0.625rem;
-	weight:500px;
-	
+		
 }  
 table {
 	
     border-collapse: collapse;
     border-spacing: 0;
-}
-body {
-    font-family: "PT Serif", Georgia, Times, "Times New Roman", serif;
-    font-size: 30px;
-    font-size: 1.0rem;
-    line-height: 1.6;
-    word-wrap: break-word;
-}
-.entry-content {
-    font-size: 30px;
-    font-size: 1.063rem;
-    line-height: 1.4;
 	
+}
 
+.left-bar{
+	display:inline-block;
+	position: relative;
+	width:50%;
+	margin-left: 10%;
 }
-.button {
-    background-color: #3A8EBD;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: center;
-    font-size: 16px;
-    
-    cursor: pointer;
-	
-	margin-top : 70px;
-	
-    margin-right: auto;
+
+.right-bar{
+    display:inline-block;
+    position: relative;
+    text-align: left;
+    width:300px;
+    margin-left: 10%;
 }
 
 /*end career page*/
@@ -371,7 +364,9 @@ body {
 	padding-bottom: 100px;
 	font-family: Verdana, sans-serif;
 	font-size: 15px;
+	
 }
+
 .Address {
   width: 300px;  
 }
