--- a/Website/css/mycss.css
+++ b/Website/css/mycss.css
@@ -1,7 +1,13 @@
 
 /*home page*/
+.hide {
+  display: none;
+}
+#announcement{
+	max-height: 500px;
+	overflow-y: scroll;
+}
 body {
-	background:url('../image/backk.png') no-repeat;
     margin:0;
     background-size:100%;
 }
@@ -200,7 +206,7 @@ body {
 
 #page-heading {
 	padding:60px;
-	padding-bottom: 100px;
+	padding-bottom: 10px;
 	font-family: Verdana, sans-serif;  
 	font-size: 30px;
 	color:#3A8EBD;
@@ -272,8 +278,10 @@ body {
 	margin:10px;
 	position:relative;
 	width:calc(100%/4);
-	height:500px;
-	background-color: grey;
+	height:auto;
+	background-color:#e8ebef;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	
 }
 .jtitle{
 	margin:10px;
@@ -285,12 +293,11 @@ body {
 .caption{
 	text-align: left;
 	font-size: 25px;
-	color:lightblue;
+	color:#337ab7;
 	padding:5px;
 }
 .jname, .jtime, .jdescription{
 	text-align: left;
-	color:white;
 	padding:10px;
 	
 }
